# Big-Interleaved-Dataset

./: .gitignore  .pre-commit-config.yaml  README.md  execute.py  exp1.ipynb  main.py  pyproject.toml  requirements.txt  rizzer.py
assets/: video.html
bild/: __init__.py  bildtypes.py  downtools.py  extraction_utils.py  helpers_fn.py  pipeline_tests.py  pipeline_utils.py  spark_session_builder.py  stage.py  tests.py
bild/img_text_pairs/: .gitignore  exp1.ipynb  log_clip_scores.py  models.py  requirements.txt  run.py  start_run.sh  utils.py
docs/: design.md
examples/: 1warc.py  tut.py
exstore/: rs.txt
prototypes/: extraction.py  phase1_alpha.py
src/: __init__.py  extraction_utils.py  sept22.parquet  tests.py
testfiles/: video.html
tests/: adhoc_test.py
